=== Opus Primus changelog.txt ===
Last revised March 24, 2013
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.2 ==
* Released ...

= Code =
* Change post thumbnail on pages to full size image and align to the center

= CSS =
* Sorted out the adaptive layout for screens less than 480px wide

/** ------------------------------------------------------------------------- */
== Version 1.1.1 ==
* Released March 2013

= Code =
* Added `all_comments_count` and `show_all_comments_count` methods to Comments class to be used in the 'comments.php' template when displaying total comments
* General minor code refactorings and improvements
* Moved `comments only tab`, `pingbacks only tab` and `trackbacks only tab` functionality into Comments class methods
* Moved `comments only panel`, `pingbacks only panel` and `trackbacks only panel` functionality into Comments class methods

= CSS =
* Add rounded corners for the comment type tabs and the comments panel
* Add `#d3d3d3` color as default tab background color; active is transparent
* Removed unused element for non-existent 'comments-toggle' script

= Miscellaneous =
* Remove $content_width set values from Structures class method `layout_open` and set in 'functions.php'
* Updated 'hooks-actions.txt'

/** ------------------------------------------------------------------------- */
== Version 1.1 ==
* Released March 2013

= Code =
* Added `excerpt_more_link` and attached to `excerpt_more` filter
* Added `anchor_title_text` for use with `excerpt_more_link` and permalink in the post meta details
* Added additional list wrapper around each comment type
* Added Breadcrumbs trails to pages and posts
* Added Comment Tabs for each type (Comment, Pingback, and Trackback)
* Created and enqueued 'opus-primus-comment-tabs.js'
* Created Header class
* Drop `restore_image_title` filter hook into `media_send_to_editor` as potentially blocking insertion of media
* Fixed comments (only) count output